--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -17,6 +17,6 @@ jobs:
                   GH_TOKEN: ${{ secrets.GH_TOKEN }} # Do not edit, defined in secrets
 
                   # Edit the following environment variables
-                  GIST_ID: 1cc900d92b9acc15786d7553b46a2cdf # The ID portion from your gist url
+                  GIST_ID: 5bdfc75844361cf2eb9954c8b77d2113 # The ID portion from your gist url
                   ALL_COMMITS: true # If `true` it will count all commits, if `false` it will count your last year commits
-                  K_FORMAT: false # If `true`, large numbers will be formatted with a "k", for example "1.5k"
+                  K_FORMAT: true # If `true`, large numbers will be formatted with a "k", for example "1.5k"
